namespace UML_Envios.Boundary;

public class InterfazUsuario
{
    public void Menu()
    {
        
    }

    public string PedirDatos()
    {
        return " ";
    }
}