namespace UML_Envios.Entities;

public class EnvioNacional : Envio
{
    public double CosteSeguro { get; set; }
}